sintatico.output
State 45 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 $@3: ε

   12 lista_variaveis: lista_variaveis T_IDENTIF $@3 lista_variaveis
   13                | T_IDENTIF

   14 lista_comandos: ε
   15               | comando lista_comandos

   16 comando: entrada_saida
   17        | atribuicao
   18        | selecao
   19        | repeticao

   20 entrada_saida: entrada
   21              | saida

   22 entrada: T_LEIA T_IDENTIF

   23 saida: T_ESCREVA expressao

   24 $@4: ε

   25 atribuicao: T_IDENTIF $@4 T_ATRIB expressao

   26 $@5: ε

   27 $@6: ε

   28 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   29 $@7: ε

   30 $@8: ε

   31 repeticao: T_ENQTO $@7 expressao T_FACA $@8 lista_comandos T_FIMENQTO

   32 expressao: expressao T_VEZES expressao
   33          | expressao T_DIV expressao
   34          | expressao T_MAIS expressao
   35          | expressao T_MENOS expressao
   36          | expressao T_MAIOR expressao
   37          | expressao T_MENOR expressao
   38          | expressao T_IGUAL expressao
   39          | expressao T_E expressao
   40          | expressao T_OU expressao
   41          | termo

   42 termo: T_IDENTIF
   43      | T_NUMERO
   44      | T_V
   45      | T_F
   46      | T_NAO termo
   47      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 12 13 22 25 42
    T_LEIA (262) 22
    T_ESCREVA (263) 23
    T_ENQTO (264) 31
    T_FACA (265) 31
    T_FIMENQTO (266) 31
    T_SE (267) 28
    T_ENTAO (268) 28
    T_SENAO (269) 28
    T_FIMSE (270) 28
    T_ATRIB (271) 25
    T_VEZES (272) 32
    T_DIV (273) 33
    T_MAIS (274) 34
    T_MENOS (275) 35
    T_MAIOR (276) 36
    T_MENOR (277) 37
    T_IGUAL (278) 38
    T_E (279) 39
    T_OU (280) 40
    T_V (281) 44
    T_F (282) 45
    T_NUMERO (283) 43
    T_NAO (284) 46
    T_ABRE (285) 47
    T_FECHA (286) 47
    T_LOGICO (287) 9
    T_INTEIRO (288) 10


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 3
        on right: 0
    $@1 (36)
        on left: 1
        on right: 3
    $@2 (37)
        on left: 2
        on right: 3
    cabecalho (38)
        on left: 4
        on right: 3
    variaveis (39)
        on left: 5 6
        on right: 3
    declaracao_variaveis (40)
        on left: 7 8
        on right: 6 7
    tipo (41)
        on left: 9 10
        on right: 7 8
    lista_variaveis (42)
        on left: 12 13
        on right: 7 8 12
    $@3 (43)
        on left: 11
        on right: 12
    lista_comandos (44)
        on left: 14 15
        on right: 3 15 28 31
    comando (45)
        on left: 16 17 18 19
        on right: 15
    entrada_saida (46)
        on left: 20 21
        on right: 16
    entrada (47)
        on left: 22
        on right: 20
    saida (48)
        on left: 23
        on right: 21
    atribuicao (49)
        on left: 25
        on right: 17
    $@4 (50)
        on left: 24
        on right: 25
    selecao (51)
        on left: 28
        on right: 18
    $@5 (52)
        on left: 26
        on right: 28
    $@6 (53)
        on left: 27
        on right: 28
    repeticao (54)
        on left: 31
        on right: 19
    $@7 (55)
        on left: 29
        on right: 31
    $@8 (56)
        on left: 30
        on right: 31
    expressao (57)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 23 25 28 31 32 33 34 35 36 37 38 39 40 47
    termo (58)
        on left: 42 43 44 45 46 47
        on right: 41 46


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_LOGICO   shift, and go to state 6
    T_INTEIRO  shift, and go to state 7

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    9 tipo: T_LOGICO •

    $default  reduce using rule 9 (tipo)


State 7

   10 tipo: T_INTEIRO •

    $default  reduce using rule 10 (tipo)


State 8

    3 programa: cabecalho variaveis • $@1 T_INICIO lista_comandos T_FIM $@2

    $default  reduce using rule 1 ($@1)

    $@1  go to state 11


State 9

    6 variaveis: declaracao_variaveis •

    $default  reduce using rule 6 (variaveis)


State 10

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    3 programa: cabecalho variaveis $@1 • T_INICIO lista_comandos T_FIM $@2

    T_INICIO  shift, and go to state 14


State 12

   13 lista_variaveis: T_IDENTIF •

    $default  reduce using rule 13 (lista_variaveis)


State 13

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •
   12 lista_variaveis: lista_variaveis • T_IDENTIF $@3 lista_variaveis

    T_IDENTIF  shift, and go to state 15
    T_LOGICO   shift, and go to state 6
    T_INTEIRO  shift, and go to state 7

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 16
    tipo                  go to state 10


State 14

    3 programa: cabecalho variaveis $@1 T_INICIO • lista_comandos T_FIM $@2

    T_IDENTIF  shift, and go to state 17
    T_LEIA     shift, and go to state 18
    T_ESCREVA  shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_SE       shift, and go to state 21

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 22
    comando         go to state 23
    entrada_saida   go to state 24
    entrada         go to state 25
    saida           go to state 26
    atribuicao      go to state 27
    selecao         go to state 28
    repeticao       go to state 29


State 15

   12 lista_variaveis: lista_variaveis T_IDENTIF • $@3 lista_variaveis

    $default  reduce using rule 11 ($@3)

    $@3  go to state 30


State 16

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 7 (declaracao_variaveis)


State 17

   25 atribuicao: T_IDENTIF • $@4 T_ATRIB expressao

    $default  reduce using rule 24 ($@4)

    $@4  go to state 31


State 18

   22 entrada: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 32


State 19

   23 saida: T_ESCREVA • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 39
    termo      go to state 40


State 20

   31 repeticao: T_ENQTO • $@7 expressao T_FACA $@8 lista_comandos T_FIMENQTO

    $default  reduce using rule 29 ($@7)

    $@7  go to state 41


State 21

   28 selecao: T_SE • expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 42
    termo      go to state 40


State 22

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos • T_FIM $@2

    T_FIM  shift, and go to state 43


State 23

   15 lista_comandos: comando • lista_comandos

    T_IDENTIF  shift, and go to state 17
    T_LEIA     shift, and go to state 18
    T_ESCREVA  shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_SE       shift, and go to state 21

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 44
    comando         go to state 23
    entrada_saida   go to state 24
    entrada         go to state 25
    saida           go to state 26
    atribuicao      go to state 27
    selecao         go to state 28
    repeticao       go to state 29


State 24

   16 comando: entrada_saida •

    $default  reduce using rule 16 (comando)


State 25

   20 entrada_saida: entrada •

    $default  reduce using rule 20 (entrada_saida)


State 26

   21 entrada_saida: saida •

    $default  reduce using rule 21 (entrada_saida)


State 27

   17 comando: atribuicao •

    $default  reduce using rule 17 (comando)


State 28

   18 comando: selecao •

    $default  reduce using rule 18 (comando)


State 29

   19 comando: repeticao •

    $default  reduce using rule 19 (comando)


State 30

   12 lista_variaveis: lista_variaveis T_IDENTIF $@3 • lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 45


State 31

   25 atribuicao: T_IDENTIF $@4 • T_ATRIB expressao

    T_ATRIB  shift, and go to state 46


State 32

   22 entrada: T_LEIA T_IDENTIF •

    $default  reduce using rule 22 (entrada)


State 33

   42 termo: T_IDENTIF •

    $default  reduce using rule 42 (termo)


State 34

   44 termo: T_V •

    $default  reduce using rule 44 (termo)


State 35

   45 termo: T_F •

    $default  reduce using rule 45 (termo)


State 36

   43 termo: T_NUMERO •

    $default  reduce using rule 43 (termo)


State 37

   46 termo: T_NAO • termo

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    termo  go to state 47


State 38

   47 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 48
    termo      go to state 40


State 39

   23 saida: T_ESCREVA expressao •
   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 23 (saida)


State 40

   41 expressao: termo •

    $default  reduce using rule 41 (expressao)


State 41

   31 repeticao: T_ENQTO $@7 • expressao T_FACA $@8 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 58
    termo      go to state 40


State 42

   28 selecao: T_SE expressao • T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_ENTAO  shift, and go to state 59
    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 43

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM • $@2

    $default  reduce using rule 2 ($@2)

    $@2  go to state 60


State 44

   15 lista_comandos: comando lista_comandos •

    $default  reduce using rule 15 (lista_comandos)


State 45

   12 lista_variaveis: lista_variaveis • T_IDENTIF $@3 lista_variaveis
   12                | lista_variaveis T_IDENTIF $@3 lista_variaveis •

    T_IDENTIF  shift, and go to state 15

    T_IDENTIF  [reduce using rule 12 (lista_variaveis)]
    $default   reduce using rule 12 (lista_variaveis)


State 46

   25 atribuicao: T_IDENTIF $@4 T_ATRIB • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 61
    termo      go to state 40


State 47

   46 termo: T_NAO termo •

    $default  reduce using rule 46 (termo)


State 48

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao
   47 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57
    T_FECHA  shift, and go to state 62


State 49

   32 expressao: expressao T_VEZES • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 63
    termo      go to state 40


State 50

   33 expressao: expressao T_DIV • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 64
    termo      go to state 40


State 51

   34 expressao: expressao T_MAIS • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 65
    termo      go to state 40


State 52

   35 expressao: expressao T_MENOS • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 66
    termo      go to state 40


State 53

   36 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 67
    termo      go to state 40


State 54

   37 expressao: expressao T_MENOR • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 68
    termo      go to state 40


State 55

   38 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 69
    termo      go to state 40


State 56

   39 expressao: expressao T_E • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 70
    termo      go to state 40


State 57

   40 expressao: expressao T_OU • expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 71
    termo      go to state 40


State 58

   31 repeticao: T_ENQTO $@7 expressao • T_FACA $@8 lista_comandos T_FIMENQTO
   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_FACA   shift, and go to state 72
    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 59

   28 selecao: T_SE expressao T_ENTAO • $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 26 ($@5)

    $@5  go to state 73


State 60

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM $@2 •

    $default  reduce using rule 3 (programa)


State 61

   25 atribuicao: T_IDENTIF $@4 T_ATRIB expressao •
   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 25 (atribuicao)


State 62

   47 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 47 (termo)


State 63

   32 expressao: expressao • T_VEZES expressao
   32          | expressao T_VEZES expressao •
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    $default  reduce using rule 32 (expressao)


State 64

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   33          | expressao T_DIV expressao •
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    $default  reduce using rule 33 (expressao)


State 65

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   34          | expressao T_MAIS expressao •
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50

    $default  reduce using rule 34 (expressao)


State 66

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   35          | expressao T_MENOS expressao •
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50

    $default  reduce using rule 35 (expressao)


State 67

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   36          | expressao T_MAIOR expressao •
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52

    $default  reduce using rule 36 (expressao)


State 68

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   37          | expressao T_MENOR expressao •
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52

    $default  reduce using rule 37 (expressao)


State 69

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   38          | expressao T_IGUAL expressao •
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54

    $default  reduce using rule 38 (expressao)


State 70

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   39          | expressao T_E expressao •
   40          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55

    $default  reduce using rule 39 (expressao)


State 71

   32 expressao: expressao • T_VEZES expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MAIS expressao
   35          | expressao • T_MENOS expressao
   36          | expressao • T_MAIOR expressao
   37          | expressao • T_MENOR expressao
   38          | expressao • T_IGUAL expressao
   39          | expressao • T_E expressao
   40          | expressao • T_OU expressao
   40          | expressao T_OU expressao •

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55

    $default  reduce using rule 40 (expressao)


State 72
